tests/error/poly_errors/non_linear2.err
Error: Expected a copyable type (at $FILE:17:8)
   | 
15 | @guppy
16 | def main() -> None:
17 |     foo(h)
   |         ^ Expected a copyable type, got type `qubit` which is not
   |           implicitly copyable

Guppy compilation failed due to 1 previous error
